--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-disqus: ## Your disqus_shortname, e.g. username
+disqus: https-yanhang-me ## Your disqus_shortname, e.g. username
 uyan: ## Your uyan_id. e.g. 1234567
 livere: ## Your livere data-uid, e.g. MTAyMC8zMDAxOC78NTgz
 changyan: ## Your changyan appid, e.g. cyrALsXc8
@@ -83,12 +83,12 @@ widgets: ## Six widgets in sidebar provided: search, category, tag, recent_posts
   - links
 
 links:
-  - title: site-name1
-    url: http://www.example1.com/
-  - title: site-name2
-    url: http://www.example2.com/
-  - title: site-name3
-    url: http://www.example3.com/
+  - title: 乐天
+    url: https://www.letiantian.me/
+  - title: 夫子
+    url: http://fuzhii.com
+  - title: 郭靖
+    url: https://guojing.io
 
 timeline:
   - num: 1
